# GreekMythologyRep

./: .classpath  .gitignore  .project  AndroidManifest.xml  CLAUDE.md  README.md  build.gradle  config.gradle  gradle.properties  keystore.properties  local.properties  project.properties  settings.gradle  utils.gradle
app/: CMakeLists.txt  build.gradle  compile.gradle  compileConfig.gradle  lint.xml  multidex-config.pro  multidex-config.txt  proguard-rules.pro  version.gradle
app/libs/: kangaroo-1.0.1.aar  kangaroo-1.0.2.aar  kangaroo-1.0.3.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: home_data.json  kingz.mainlist.json  live.json  posterimage.xml  videopath.xml  wan_android_api.json  webAppTest.html  xmlTest.xml  zeke_android.rar
app/src/main/assets/js/: webAndroidBridge.js
app/src/main/cpp/: native-lib.cpp
app/src/main/doc/: Todo.md
app/src/main/doc/draw/: Canvas-API.md
app/src/main/doc/font/: notes.txt
app/src/main/java/com/: App.java  BaseActivity.java  ListBillData.java  MainActivity.java  SplashActivity.java  Test11.java
app/src/main/jni/: main.c
app/src/main/res/anim/: activity_close_enter.xml  activity_open_enter.xml  activity_open_exit.xml  card_flip_left_in.xml  card_flip_left_out.xml  card_flip_right_in.xml  card_flip_right_out.xml  cycle_7.xml  fade.xml  hyperspace_in.xml  hyperspace_out.xml  push_alpha_out.xml  push_bottom_in.xml  push_bottom_out.xml  push_up_in.xml  shake.xml  zoom_enter.xml
app/src/main/res/color/: main_bottom_color.xml
app/src/main/res/drawable/: android_layerlist_define.xml  android_selector_define.xml  android_shape_define.xml  bg_main_vod_search_content.xml  chanelllist_selector.xml  collecte_selector.xml  custom_toast_bg.xml  divider_bg.xml  fragment_dialog.xml  ic_app_launcher.xml  ic_tip_down.xml  ic_tip_left.xml  ic_tip_right.xml  ic_tip_warn.xml  ic_tip_wifi.xml  listview_checked.xml  listview_divider.xml  listview_item_selector.xml  listview_unchecked.xml  logbox.xml  loginin_button.xml  mediaplayer_thumb.xml  mplayer_seekbar_style.xml  news_content_bkg.xml  player_bottom_bg.xml  player_seekbar_progress.xml  player_top_bg.xml  progress_bar.xml  progressbar.xml  scrubber_control_selector_holo.xml  scrubber_progress_horizontal_holo_dark.xml  seekbar_self_color_style.xml  seekbar_self_style.xml  seekbar_thumb.xml  selector_radius_buttons.xml  shape_hub_btn_pressed.xml  shape_tip_background.xml  text_focused_bg_shape.xml  text_forcused_style_xjdx.xml  text_selected_bg_shape.xml  (+1 more)
app/src/main/res/drawable-xxhdpi/: expandindicater_selector.xml
app/src/main/res/layout/: acitivty_service_test.xml  act_detailpage.xml  activity_aidl.xml  activity_arcs_demo.xml  activity_bitmap_memory.xml  activity_colormatrix.xml  activity_crossfade.xml  activity_decompose_anim.xml  activity_fade_anim.xml  activity_file_pictures.xml  activity_labeltext_text.xml  activity_languages.xml  activity_layout_list.xml  (+75 more)
app/src/main/res/layout-land/: fragment_demo.xml  layout_frame.xml  srclayout_frame_layout.xml
app/src/main/res/layout-large/: srclayout_frame_layout.xml
module-Native/: CMakeLists.txt  build.gradle
module-Native/src/main/: AndroidManifest.xml
module-Native/src/main/cpp/: BitmapTool.cpp  JniTestDemo.cpp  XulUtils_doBlur.cpp  com_starcor_xul_XulUtils.h  common.h  native-lib.cpp  task_runner.h
(+2102 files in other folders)
